--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools>=61.0", "wheel"]
+requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -49,8 +49,10 @@ Repository = "https://github.com/promptcontracts/prompt-contracts"
 "Bug Tracker" = "https://github.com/promptcontracts/prompt-contracts/issues"
 
 [tool.setuptools]
-packages = ["promptcontracts"]
 package-dir = {"" = "src"}
+
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [tool.setuptools.package-data]
 promptcontracts = ["spec/**/*.json", "spec/**/*.md"]
