feat: v0.2.0 - professional package structure
- Add public API (run_contract, validate_artifact)
- Add execution modes with capability negotiation
- Add auto-repair utilities and custom errors
- Add GitHub templates and CI/CD pipeline
- Fix linting and formatting
- 47 tests passing
- Backwards compatible with v0.1.0

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 # Include specification files
-include src/promptcontracts/spec/**/*.md
-include src/promptcontracts/spec/schema/*.json
+recursive-include src/promptcontracts/spec *.md
+recursive-include src/promptcontracts/spec/schema *.json
 
 # Include documentation
 include README.md
@@ -21,4 +21,3 @@ recursive-exclude * *.py[co]
 recursive-exclude * .DS_Store
 recursive-exclude tests *
 recursive-exclude .github *
-
