--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,12 +48,14 @@ dependencies = [
     "httpx>=0.24.0",
     "rich>=13.0.0",
     "numpy>=1.24.0",
+    "scipy>=1.10.0",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0.0",
     "pytest-cov>=4.0.0",
+    "pytest-mock>=3.10.0",
     "black>=24.0.0",
     "isort>=5.13.0",
     "ruff>=0.1.0",
@@ -99,6 +101,8 @@ include_trailing_comma = true
 [tool.ruff]
 line-length = 100
 target-version = "py310"
+
+[tool.ruff.lint]
 select = [
     "E",   # pycodestyle errors
     "W",   # pycodestyle warnings
@@ -114,7 +118,7 @@ ignore = [
     "C901",  # too complex
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]  # unused imports in __init__
 "tests/*" = ["F401", "F811"]
 
