Fix fundamental installation issues by switching to standard package layout
- Remove src/ layout that was causing ModuleNotFoundError issues
- Switch to standard Python package layout for better compatibility
- Update pyproject.toml configuration for standard layout
- Add robust setup.py with proper package discovery
- Create requirements.txt for dependency management
- Add DEVELOPMENT.md with installation guide
- Add install_dev.py script for robust development setup
- All tests passing (203/203)
- CLI now works reliably across different environments

This resolves the fundamental issue where users would randomly get
ModuleNotFoundError after pushes or environment changes.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,11 +76,8 @@ Documentation = "https://promptcontracts.org/docs"
 Repository = "https://github.com/promptcontracts/prompt-contracts"
 "Bug Tracker" = "https://github.com/promptcontracts/prompt-contracts/issues"
 
-[tool.setuptools]
-package-dir = {"" = "src"}
-
 [tool.setuptools.packages.find]
-where = ["src"]
+include = ["promptcontracts*"]
 
 [tool.setuptools.package-data]
 promptcontracts = ["spec/**/*.json", "spec/**/*.md"]
@@ -140,7 +137,7 @@ markers = [
 ]
 
 [tool.coverage.run]
-source = ["src/promptcontracts"]
+source = ["promptcontracts"]
 omit = [
     "*/tests/*",
     "*/__pycache__/*",
