--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+# Core dependencies for prompt-contracts
 pyyaml>=6.0.1
 jsonschema>=4.0.0
 jsonpath-ng>=1.6.0
@@ -6,9 +7,3 @@ httpx>=0.24.0
 rich>=13.0.0
 numpy>=1.24.0
 scipy>=1.10.0
-pytest>=7.0.0
-pytest-cov>=4.0.0
-pytest-mock>=3.10.0
-black>=23.0.0
-isort>=5.12.0
-ruff>=0.1.0
