Update all src/ references to standard package layout
- Fix Makefile lint/format targets to use promptcontracts/ instead of src/
- Update release scripts (release-checklist.sh, complete-release.sh)
- Fix Dockerfile to copy promptcontracts/ instead of src/
- Update MANIFEST.in for new package structure
- Fix CODEOWNERS paths for new layout
- Update CONTRIBUTING.md with correct paths
- Fix all example JSON schema references
- Update documentation (README.md, QUICKSTART.md, BEST_PRACTICES.md)
- All linters passing (black, isort, ruff)
- All tests passing (203/203)
- All CLI functionality working
- Release checklist passing
- Package builds successfully
- Extensive testing completed

This completes the migration from src/ layout to standard package layout,
ensuring all tools, scripts, and documentation are consistent.

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -5,14 +5,13 @@
 * @PhilipposMelikidis
 
 # PCSL Specification (requires careful review)
-/src/promptcontracts/spec/ @PhilipposMelikidis
+/promptcontracts/spec/ @PhilipposMelikidis
 
 # JSON Schemas (breaking changes require approval)
-/src/promptcontracts/spec/schema/ @PhilipposMelikidis
+/promptcontracts/spec/schema/ @PhilipposMelikidis
 
 # Core runner and validation logic
-/src/promptcontracts/core/ @PhilipposMelikidis
+/promptcontracts/core/ @PhilipposMelikidis
 
 # GitHub workflows and CI
 /.github/ @PhilipposMelikidis
-
