--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 # Include specification files
-recursive-include src/promptcontracts/spec *.md
-recursive-include src/promptcontracts/spec/schema *.json
+recursive-include promptcontracts/spec *.md
+recursive-include promptcontracts/spec/schema *.json
 
 # Include documentation
 include README.md
